# planets

./: .clang-format  .gitignore  CMakeLists.txt
shaders/: lit.frag
src/: main.cpp
src/core/: camera.cpp  camera.h  common.h  geometry.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  system.cpp  system.h  transform.h  window.cpp  window.h
src/renderer/: mesh.cpp  mesh.h  renderer.cpp  renderer.h
src/simulation/: system.cpp  system.h
